fixed layout issue in towerview

--- a/views/container/style.styl
+++ b/views/container/style.styl
@@ -191,7 +191,7 @@ body
 
     block-width = 133px
     block-padding = 15px
-    full-block-width = block-width * 2 + block-padding * 2
+    full-block-width = block-width * 2 + block-padding * 2 - 4
     blocks = 6
     block-padding = 15px
 
